# drone-backend-bench

./: .dockerignore  .gitattributes  .gitignore  BENCHMARK_SPEC.md  Dockerfile  LICENSE  README.md  docker-compose.yml  recording_1.jsonl  recording_2.jsonl  test_summary.json
.github/workflows/: ci.yml
benchmarks/: generate_report.py  run_campaign.py
benchmarks/k6/lib/: msgpack.js
benchmarks/k6/results/: aiohttp_websocket_100_20260703_193744.csv  aiohttp_websocket_100_20260704_112510.csv  chi_websocket_100_20260703_194237.csv  (+33 more)
benchmarks/results/: campaign_results.json
benchmarks/workload/: README.md  generator.py  recorder.py  replay.py  run_pipeline.sh  scenarios.py  validate_workload.py
candidates/python/aiohttp-bridge/: Dockerfile  pyproject.toml
candidates/python/aiohttp-bridge/src/app/: __init__.py  store.py
candidates/python/starlette-bridge/: pyproject.toml
candidates/python/starlette-bridge/src/app/: errors.py  main.py
docs/: Backend_Framework_Evaluation.docx  Skyeris_Aero_Tech_GCS_Backend_Evaluation_Report.md  benchmark_appendix.md  benchmark_report.md  framework_comparison.md  methodology.md  reproducibility.md  threats_to_validity.md
drone-gcs-bench/: .gitignore  README.md  docker-entrypoint.sh  requirements.txt
drone-gcs-bench/benchmarks/: run_campaign.py
drone-gcs-bench/docs/: Skyeris_Aero_Tech_GCS_Backend_Evaluation_Report.md  Skyeris_Aero_Tech_GCS_Backend_Evaluation_Report_tmp.html  benchmark_report.md  framework_comparison.md  methodology.md  reproducibility.md
results/reports/: benchmark_report.html
(+208 files in other folders)
