[project]
name = "aiohttp-bridge"
version = "0.1.0"
description = "aiohttp implementation of the Drone GCS benchmark service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.7.0",
    "pymavlink>=2.4.49",
    "msgpack>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
